--- a/ITPrime.vcxproj
+++ b/ITPrime.vcxproj
@@ -139,11 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="beautifulWordCounter.cpp" />
+    <ClCompile Include="beautifulWordsCounter.cpp" />
     <ClCompile Include="ITPrime.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="beautifulWordCounter.h" />
+    <ClInclude Include="beautifulWordsCounter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
